<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@drawable/back2"
        android:layout_height="match_parent"
        tools:context=".UploadActivity"
        tools:showIn="@layout/app_bar_upload">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_marginTop="200dp"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="52dp" />

                <ImageView
                    android:id="@+id/theimageView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/add_image"
                    android:contentDescription="@string/addPhoto"
                    app:srcCompat="@drawable/add_image" />

                <Button
                    android:layout_width="match_parent"
                    android:id="@+id/choose"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:layout_marginTop="7dp"
                    android:text="@string/Choose"
                    android:layout_marginBottom="8dp"

                    />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/nameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <EditText
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="20"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:inputType="textPersonName"
                        android:textColor="@color/colorAccent"
                        android:hint="@string/hint_name"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/pnumLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <EditText
                        android:id="@+id/pnumEditText"
                        android:layout_width="match_parent"
                        android:textColor="@color/colorAccent"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:layout_height="wrap_content"
                        android:ems="20"
                        android:hint="@string/hint_num"
                        android:inputType="phone"
                        android:singleLine="true" />


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/dateLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <EditText
                            android:id="@+id/dateEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="20"
                            android:textColor="@color/colorAccent"
                            android:focusable="false"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:inputType="date"
                            android:hint="@string/hint_date"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/locationLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <EditText
                            android:id="@+id/locationEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="20"
                            android:textColor="@color/colorAccent"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:inputType="textPersonName"
                            android:hint="@string/hint_location"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>



                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/descLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <EditText
                            android:id="@+id/descEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="20"
                            android:textColor="@color/colorAccent"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:inputType="text|textMultiLine"
                            android:hint="@string/hint_desc"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="7dp"
                    android:text="Status"
                    android:textSize="7.5pt" />


                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/lost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/lost" />

                    <RadioButton
                        android:id="@+id/found"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/found" />
                </RadioGroup>

                <Button
                    android:id="@+id/saveBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="20"
                    android:layout_marginTop="40dp"
                    android:background="@color/colorAccent"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/submit"
                    android:textColor="@android:color/white" />


            </LinearLayout>
        </ScrollView>

    </LinearLayout>

