<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/back2"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity_detail"
    tools:showIn="@layout/app_bar_activity_detail">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp">

        <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="match_parent">

            <RelativeLayout
                android:background="@drawable/back2"
                android:layout_width="wrap_content"
                android:padding="8dp"
                android:layout_height="wrap_content"

            >

            <ImageView
                android:id="@+id/itemimageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:padding="2dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/add_image" />

            <TextView
                android:id="@+id/dateDetailTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itemimageView"
                android:layout_gravity="end"
                android:layout_marginTop="4dp"
                android:padding="2dp"
                android:text="@string/hint_date"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dateDetailTxt"
                android:layout_marginTop="28dp"
                android:text="ITEM DETAILS"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorAccent"
                android:padding="2dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/nameDetailTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/info"
                android:layout_marginTop="3dp"
                android:padding="2dp"
                android:text="@string/hint_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />


            <TextView
                android:id="@+id/phoneDetailTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:layout_below="@+id/nameDetailTxt"
                android:layout_marginTop="3dp"
                android:padding="2dp"
                android:text="@string/hint_num"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/locDetailTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phoneDetailTxt"
                android:layout_marginTop="3dp"
                android:padding="2dp"
                android:text="@string/hint_location"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/statusDetailTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/locDetailTxt"
                android:layout_marginTop="3dp"
                android:padding="2dp"
                android:text="@string/status"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/descDetailTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/statusDetailTxt"
                android:layout_marginTop="3dp"
                android:padding="2dp"
                android:text="@string/hint_desc"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

        </RelativeLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>

</RelativeLayout>